--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/src/assets/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Julian Avellaneda | Software Developer</title>
+    <script
+      defer
+      data-domain="jdavellaneda.vercel.app"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
